@@ -1,10 +1,12 @@
-\name{slice.design}
+\name{sliceDesign}
+\alias{sliceDesign}
 \alias{slice.design}
 \title{Design matrices for likelihood slices.}
 \description{
-  \code{slice.design} generates a data-frame representing points taken along one or more slices through a point in a multidimensional space.
+  \code{sliceDesign} generates a data-frame representing points taken along one or more slices through a point in a multidimensional space.
 }
 \usage{
+sliceDesign(center, ...)
 slice.design(center, ...)
 }
 \arguments{
@@ -16,18 +18,19 @@ slice.design(center, ...)
   }
 }
 \value{
-  \code{slice.design} returns a data frame with one row per point along a slice.
+  \code{sliceDesign} returns a data frame with one row per point along a slice.
   The column \code{slice} is a factor that tells which slice each point belongs to. 
+  The equivalent form (\code{slice.design}) is now deprecated.
 }
 \seealso{\code{\link{profile.design}}}
 \author{Aaron A. King \email{kingaa at umich dot edu}}
 \examples{
 ## A single 11-point slice through the point c(A=3,B=8,C=0) along the B direction.
-x <- slice.design(center=c(A=3,B=8,C=0),B=seq(0,10,by=1))
+x <- sliceDesign(center=c(A=3,B=8,C=0),B=seq(0,10,by=1))
 dim(x)
 plot(x)
 ## Two slices through the same point along the A and C directions.
-x <- slice.design(c(A=3,B=8,C=0),A=seq(0,5,by=1),C=seq(0,5,length=11))
+x <- sliceDesign(c(A=3,B=8,C=0),A=seq(0,5,by=1),C=seq(0,5,length=11))
 dim(x)
 plot(x)
 }
